Fix: text align

--- a/components/atoms/Heading/styles.module.scss
+++ b/components/atoms/Heading/styles.module.scss
@@ -3,6 +3,7 @@
 .heading {
   font-weight: 400;
   font-style: italic;
+  text-align: center;
 
   &--H1 {
     font-size: 3rem;
