--- a/components/molecules/AboutContent/styles.module.scss
+++ b/components/molecules/AboutContent/styles.module.scss
@@ -30,10 +30,8 @@
       text-align: center;
     }
     &--about {
-      
-
       justify-content: center;
-      text-align: justify;
+      text-align: left;
       line-height: 2.4rem;
       margin: 2rem 1.5rem 2rem 1rem;
     }
